# TerminalRaytracer

./: .gitignore  CMakeLists.txt  README.md  config.txt  main.cc
docs/: Doxyfile
lib/: CMakeLists.txt
lib/config-parser/: CMakeLists.txt  libconfig-parser.hh
lib/config-parser/include/: parser.hh
lib/config-parser/src/: parser.cc
lib/objects/: CMakeLists.txt  libobjects.hh
lib/objects/include/: hittable-list.hh  hittable.hh  moveable.hh  object_renderer.hh  sphere.hh
lib/objects/src/: hittable-list.cc  object-renderer.cc  sphere.cc
lib/utils/: CMakeLists.txt  libutils.hh
lib/utils/include/: ray.hh  screen.hh  singleton.hh  vector.hh
lib/utils/src/: ray.cc  screen.cc  vector.cc
tests/: CMakeLists.txt
tests/assets/: invalid_sphere_1.txt  invalid_sphere_2.txt  invalid_sphere_3.txt  simple_range.txt  simple_sphere.txt  sphere_range_invalid_1.txt  sphere_range_invalid_2.txt  sphere_range_invalid_3.txt  sphere_range_invalid_4.txt
tests/src/: config-parser_tests.cc  ray_tests.cc  screen_tests.cc  sphere_tests.cc  vector_tests.cc
